<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>rmw_ecal_dynamic_cpp</name>
	<version>0.6.0</version>
	<description>RMW implementation based on eCAL.</description>
	<maintainer email="aleksandar.brakmic@continental-corporation.com">Aleksandar Brakmić</maintainer>
	<license>Apache License 2.0</license>

 	<build_depend>rmw</build_depend>
	<build_depend>rcutils</build_depend>

	<depend>rmw_ecal_shared_cpp</depend>
	<depend>rmw_implementation_cmake</depend>
	<depend>rosidl_generator_c</depend>

	<group_depend>rmw_implementation_packages</group_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
